--- a/.github/workflows/deploy_on_deploy_action.yml
+++ b/.github/workflows/deploy_on_deploy_action.yml
@@ -1,8 +1,7 @@
-name: deploy
+name: deploy on action
 
 on:
-  pull_request:
-    types: [labeled]
+  deployment
 
 jobs:
   test:
@@ -13,6 +12,4 @@ jobs:
       with:
           fetch-depth: 1
     - name: Setup tmate session (debug)
-      uses: mxschmitt/action-tmate@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: hmarr/debug-action
