--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,5 +11,13 @@ jobs:
     - uses: actions/checkout@v1
       with:
           fetch-depth: 1
+    
     - name: Setup tmate session (debug)
       uses: hmarr/debug-action@master
+    
+    - name: update deploy status
+    if: always()
+    uses: unacast/actions-github-deployment-status@master
+    with:
+      github_token: ${{ secrets.GITHUB_TOKEN }}
+      status: ${{ job.status }}
