--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,13 +11,33 @@ jobs:
     - uses: actions/checkout@v1
       with:
           fetch-depth: 1
-    
-    - name: Setup tmate session (debug)
-      uses: hmarr/debug-action@master
-    
-    - name: update deploy status
-      if: always()
-      uses: unacast/actions-github-deployment-status@master
+   
+    - name: 'deployment pending'
+      uses: 'deliverybot/deployment-status@master'
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        status: ${{ job.status }}
+        state: 'pending'
+        token: '${{ github.token }}'
+
+    - name: Print env variables (debug)
+      uses: hmarr/debug-action@master
+
+    - name: 'deployment success'
+      if: success()
+      uses: 'deliverybot/deployment-status@master'
+      with:
+        state: 'success'
+        token: '${{ github.token }}'
+
+    - name: 'deployment failure'
+      if: failure()
+      uses: 'deliverybot/deployment-status@master'
+      with:
+        state: 'failure'
+        token: '${{ github.token }}'
+
+        #    - name: update deploy status
+        #if: always()
+        #uses: unacast/actions-github-deployment-status@master
+        #with:
+        #github_token: ${{ secrets.GITHUB_TOKEN }}
+        #status: ${{ job.status }}
