--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,10 @@ jobs:
 
     - name: Print env variables (debug)
       env:
-        TARGET_ADDRESS: https://{{github.GITHUB_ACTOR}}.dev.firstleaf.club
-        AWS_BUCKET: firstleaf-www-{{github.GITHUB_ACTOR}}
+        TARGET_ADDRESS: https://{{github.actor}}.dev.firstleaf.club
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+        EVENT_VAR: ${{ toJson(github.event) }}
+        AWS_BUCKET: firstleaf-www-{{github.actor}}
       uses: hmarr/debug-action@master
 
     - name: 'deployment success'
