--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -4,5 +4,7 @@ review:
   transient_environment: true
   production_environment: false
 
+  payload:
+    user: santi
   # Dynamic environment name. The environment will look like pr123.
   environment: pr${{ pr }}
