added new variables

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,12 @@ jobs:
 
     - name: Print env variables (debug)
       env:
-        TARGET_ADDRESS: https://${{github.actor}}.dev.firstleaf.club
+        TARGET_ADDRESS: https://${{ toJson(github.event.deployment.payload.user) }}.dev.firstleaf.club
         GITHUB_CONTEXT: ${{ toJson(github) }}
         EVENT_VAR: ${{ toJson(github.event) }}
         ENVIROMENT_VAR: ${{ toJson(github.event.deployment.environment) }}
-        AWS_BUCKET: firstleaf-www-${{github.actor}}
+        USER: ${{ toJson(github.event.deployment.environment) }}
+        AWS_BUCKET: firstleaf-www-${{ toJson(github.event.deployment.payload.user) }}
       uses: hmarr/debug-action@master
 
     - name: 'deployment success'
