test without toJson

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Print env variables (debug)
       env:
-        TARGET_ADDRESS: https://${{ toJson(github.event.deployment.payload.user) }}.dev.firstleaf.club
+        TARGET_ADDRESS: https://${{github.event.deployment.payload.user}}.dev.firstleaf.club
         GITHUB_CONTEXT: ${{ toJson(github) }}
         EVENT_VAR: ${{ toJson(github.event) }}
         ENVIROMENT_VAR: ${{ toJson(github.event.deployment.environment) }}
