--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,14 +18,26 @@ jobs:
       with:
           fetch-depth: 1
 
-    - name: Print env variables (debug)
+    - name: Deploy to production
+      if: (github.event.deployment.environment == "production" && github.event.deployment.production_environment == true)
       env:
         TARGET_ADDRESS: https://${{github.event.deployment.payload.user}}.dev.firstleaf.club
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-        EVENT_VAR: ${{ toJson(github.event) }}
-        ENVIROMENT_VAR: ${{ toJson(github.event.deployment.environment) }}
-        USER: ${{ toJson(github.event.deployment.environment) }}
         AWS_BUCKET: firstleaf-www-${{ toJson(github.event.deployment.payload.user) }}
+        #GITHUB_CONTEXT: ${{ toJson(github) }}
+        #EVENT_VAR: ${{ toJson(github.event) }}
+        #ENVIROMENT_VAR: ${{ toJson(github.event.deployment.environment) }}
+        #USER: ${{ toJson(github.event.deployment.environment) }}
+      uses: hmarr/debug-action@master
+
+    - name: Deploy to dev bucket
+      if: ( startsWith(github.event.deployment.environment, 'pr') && github.event.deployment.production_environment == false)
+      env:
+        TARGET_ADDRESS: https://${{github.event.deployment.payload.user}}.dev.firstleaf.club
+        AWS_BUCKET: firstleaf-www-${{ toJson(github.event.deployment.payload.user) }}
+        #GITHUB_CONTEXT: ${{ toJson(github) }}
+        #EVENT_VAR: ${{ toJson(github.event) }}
+        #ENVIROMENT_VAR: ${{ toJson(github.event.deployment.environment) }}
+        #USER: ${{ toJson(github.event.deployment.environment) }}
       uses: hmarr/debug-action@master
 
     - name: 'deployment success'
