--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -6,9 +6,8 @@ review:
 
   payload:
     user: santi
-    owner: ${{ owner }}
   # Dynamic environment name. The environment will look like pr123.
-  environment: pr${{ pr }}
+  environment: pull-request-${{ pr }}
 
 production:
   production_environment: true
