--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,8 @@ jobs:
           fetch-depth: 1
 
     - name: Deploy to production
-      if: (github.event.deployment.environment == 'production' && github.event.deployment.production_environment == true)
+      if: ( github.event.deployment.environment == 'production' )
       env:
-        TARGET_ADDRESS: https://${{github.event.deployment.payload.user}}.dev.firstleaf.club
-        AWS_BUCKET: firstleaf-www-${{ toJson(github.event.deployment.payload.user) }}
         #GITHUB_CONTEXT: ${{ toJson(github) }}
         #EVENT_VAR: ${{ toJson(github.event) }}
         #ENVIROMENT_VAR: ${{ toJson(github.event.deployment.environment) }}
@@ -30,10 +28,10 @@ jobs:
       uses: hmarr/debug-action@master
 
     - name: Deploy to dev bucket
-      if: ( startsWith(github.event.deployment.environment, 'pr') && github.event.deployment.production_environment == false)
+      if: ( startsWith(github.event.deployment.environment, 'pull-request') )
       env:
         TARGET_ADDRESS: https://${{github.event.deployment.payload.user}}.dev.firstleaf.club
-        AWS_BUCKET: firstleaf-www-${{ toJson(github.event.deployment.payload.user) }}
+        AWS_BUCKET: firstleaf-www-${{github.event.deployment.payload.user}}
         #GITHUB_CONTEXT: ${{ toJson(github) }}
         #EVENT_VAR: ${{ toJson(github.event) }}
         #ENVIROMENT_VAR: ${{ toJson(github.event.deployment.environment) }}
