--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: join('deploy ', github.event.deployment.payload.user)
+name: join('test deploy ', github.event.deployment.payload.user)
 
 on:
   deployment:
