--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,8 @@ jobs:
     - name: Deploy to production
       #github.ref is empty for some reason
       #if: (github.event.deployment.environment == 'production' && github.ref == 'refs/heads/master')
-      if: github.event.deployment.environment == `git show-ref -s refs/heads/master`
-      run: echo "Deployed to production"
+      if: github.event.deployment.environment == 'production'
+      run: [ $GITHUB_SHA == `git show-ref -s refs/heads/master` ] || exit 1 && echo "depoyed to" && echo "production"
 
     - name: Deploy to dev bucket
       if: endsWith(github.event.deployment.environment, 'dev.firstleaf.club')
