--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,16 +12,16 @@ jobs:
         uses: ruby/setup-ruby@v1
       - name: Echo ref num
         env:
-          GITHUB_REF: master
+          RefKey: master
         run: |
           echo `git show-ref -s master`
           echo $GITHUB_SHA
-          echo $GITHUB_REF
+          echo $RefKey
       #- name: Env variables
       #  uses: hmarr/debug-action@master
       - uses: actions/cache@v2
         env:
-          GITHUB_REF: master
+          RefKey: master
         with:
           path: vendor/bundle
           key: ${{ runner.os }}-gems-${{ hashFiles('.ruby-version') }}-${{ hashFiles('**/Gemfile.lock') }}
