--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: "Setup ruby"
         uses: ruby/setup-ruby@v1
       - name: Echo ref num
@@ -18,6 +18,8 @@ jobs:
           echo $GITHUB_SHA
           echo $GITHUB_REF
           echo $RefKey
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v2
       #- name: Env variables
       #  uses: hmarr/debug-action@master
       - uses: actions/cache@v2
