--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy
 
 on:
-  deployment:
+  workflow_dispatch
 
 jobs:
   tests:
@@ -18,10 +18,10 @@ jobs:
           echo $GITHUB_SHA
           echo $GITHUB_REF
           echo $RefKey
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v2
-      #- name: Env variables
-      #  uses: hmarr/debug-action@master
+      #- name: Setup tmate session
+      #  uses: mxschmitt/action-tmate@v2
+      - name: Env variables
+        uses: hmarr/debug-action@master
       - uses: actions/cache@v2
         env:
           RefKey: master
