--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,11 @@ name: Deploy
 
 on:
   workflow_dispatch
+    inputs:
+      beanstalk-env:
+        description: Beanstalk Env
+        default: ${{ secrets.BEANSTALK_ENV }}
+        required: true
 
 jobs:
   tests:
@@ -17,7 +22,7 @@ jobs:
           echo `git show-ref -s master`
           echo $GITHUB_SHA
           echo $GITHUB_REF
-          echo $RefKey
+          echo ${{ github.event.inputs.beanstalk-env }}
       #- name: Setup tmate session
       #  uses: mxschmitt/action-tmate@v2
       - name: Env variables
