--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
     inputs:
       beanstalk-env:
         description: Beanstalk Env
