--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,12 @@ jobs:
           echo `git show-ref -s master`
           echo $GITHUB_SHA
           echo $GITHUB_REF
+          echo ${{ github.event.inputs.beanstalk-env || secrets.BEANSTALK_ENV }}
+
       - name: Env variables
         uses: hmarr/debug-action@master
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v2
+      #- name: Setup tmate session
+      #uses: mxschmitt/action-tmate@v2
       - uses: actions/cache@v2
         env:
           RefKey: master
