--- a/.github/workflows/pr_comment.yml
+++ b/.github/workflows/pr_comment.yml
@@ -1,8 +1,8 @@
 name: pr comment
 
 on:
-  pull_request:
-    types: [opened]
+  #  pull_request:
+  #  types: [opened]
   issue_comment:
     types: [created, edited, deleted]
 
