--- a/.github/workflows/action_deploy.yml
+++ b/.github/workflows/action_deploy.yml
@@ -3,6 +3,9 @@ name: deliver deploy
 on:
   workflow_dispatch:
     inputs:
+      git_ref:
+        description: Git Ref (Optional)
+        required: false
       beanstalk_env:
         description: Beanstalk Environment
         required: false
@@ -11,6 +14,20 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: 'Clone Repository (latest)'
+        if: github.event.inputs.git_ref == ''
+        uses: actions/checkout@v2
+      - name: 'Clone Repository (custom ref)'
+        if: github.event.inputs.git_ref != ''
+        with:
+          ref: ${{ github.event.inputs.git_ref }}$ 
+        uses: actions/checkout@v2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
       - name: Test input
         env:
           BEANSTALK: ${{ github.event.inputs.beanstalk_env }} 
