--- a/.github/workflows/action_deploy.yml
+++ b/.github/workflows/action_deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - name: 'Clone Repository (custom ref)'
         if: github.event.inputs.git_ref != ''
         with:
-          ref: ${{ github.event.inputs.git_ref }}$ 
+          ref: ${{ github.event.inputs.git_ref }} 
         uses: actions/checkout@v2
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
