--- a/.github/workflows/action_deploy.yml
+++ b/.github/workflows/action_deploy.yml
@@ -9,7 +9,7 @@ on:
       beanstalk_env:
         description: Beanstalk Environment
         required: false
-        default: 'firstleaf-production'
+        default: secrets.ENVIRONMENT_PRODUCTION_NAME  
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -22,12 +22,6 @@ jobs:
         with:
           ref: ${{ github.event.inputs.git_ref }} 
         uses: actions/checkout@v2
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
       - name: Test input
         env:
           BEANSTALK: ${{ github.event.inputs.beanstalk_env }} 
