--- a/.github/workflows/action_deploy.yml
+++ b/.github/workflows/action_deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Test input
         env:
           BEANSTALK: ${{ github.event.inputs.beanstalk_env }} 
-          TEST: ${{ contains(github.ref,'master') }}
+          TEST: ${{ !contains(github.ref,'master') }}
         run: |
           echo "testing input: ${{ github.event.inputs.beanstalk_env }}"
           echo "print preset env $BEANSTALK"
@@ -30,6 +30,7 @@ jobs:
           repository: ${{ github.repository }}
           ref: ${{ github.ref }}
           environment: production
+          production_environment: ${{ contains(github.ref,'master') }}
           auto_merge: false
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
@@ -43,6 +44,7 @@ jobs:
           deployment: ${{ fromJson(steps.create_deployment.outputs.data).id }}
           environment: dev
           environment_url: https://example.com
+          production_environment: ${{ contains(github.ref,'master') }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           state: in_progress
           mediaType: '{"previews": ["flash", "ant-man"]}'
@@ -65,6 +67,7 @@ jobs:
           deployment: ${{ fromJson(steps.create_deployment.outputs.data).id }}
           environment: dev
           environment_url: https://example.com
+          production_environment: ${{ contains(github.ref,'master') }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           mediaType: '{"previews": ["ant-man"]}'
           state: success
@@ -81,6 +84,7 @@ jobs:
           deployment: ${{ fromJson(steps.create_deployment.outputs.data).id }}
           environment: dev
           environment_url: https://example.com
+          production_environment: ${{ contains(github.ref,'master') }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           mediaType: '{"previews": ["ant-man"]}'
           state: failure
