--- a/.github/workflows/action_deploy.yml
+++ b/.github/workflows/action_deploy.yml
@@ -22,6 +22,16 @@ jobs:
           echo $GITHUB_REF
           echo "test $TEST"
 
+      - name: Set environment to production
+        if: ${{ contains(github.ref,'master') }}
+        run: |
+          echo "::set-env name=ENVIRONMENT::production"
+      
+      - name: Set enviroment to staging
+        if: ${{ !contains(github.ref,'master') }}
+        run: |
+          echo "::set-env name=ENVIRONMENT::staging"
+
       - name: Create deployment
         id: create_deployment
         uses: octokit/request-action@v2.x
@@ -29,7 +39,7 @@ jobs:
           route: POST /repos/:repository/deployments
           repository: ${{ github.repository }}
           ref: ${{ github.ref }}
-          environment: production
+          environment: $ENVIRONMENT
           production_environment: ${{ contains(github.ref,'master') }}
           auto_merge: false
         env:
@@ -42,7 +52,7 @@ jobs:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
           deployment: ${{ fromJson(steps.create_deployment.outputs.data).id }}
-          environment: dev
+          environment: $ENVIRONMENT
           environment_url: https://example.com
           production_environment: ${{ contains(github.ref,'master') }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
@@ -65,7 +75,7 @@ jobs:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
           deployment: ${{ fromJson(steps.create_deployment.outputs.data).id }}
-          environment: dev
+          environment: $ENVIRONMENT
           environment_url: https://example.com
           production_environment: ${{ contains(github.ref,'master') }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
@@ -82,7 +92,7 @@ jobs:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
           deployment: ${{ fromJson(steps.create_deployment.outputs.data).id }}
-          environment: dev
+          environment: $ENVIRONMENT
           environment_url: https://example.com
           production_environment: ${{ contains(github.ref,'master') }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
