--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -59,5 +59,6 @@ jobs:
         if: always()
         with:
           state: ${{ job.status }}
+          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
