--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -32,20 +32,24 @@ jobs:
         run: |
           echo "::set-env name=ENVIRONMENT::staging"
 
-      - name: Create GitHub deployment
-        uses: avakar/create-deployment@v1
-        id: deployment
+      - name: Create deployment
+        id: create_deployment
+        uses: octokit/request-action@v2.x
         with:
-          auto_merge: false
+          route: POST /repos/:repository/deployments
+          repository: ${{ github.repository }}
+          ref: ${{ github.ref }}
           environment: ${{ env.ENVIRONMENT }}
-          payload: '{ "user": "${{ github.actor }}" }'
+          production_environment: ${{ contains(github.ref,'master') }}
+          owner: ${{ github.actor }}
+          auto_merge: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       
       - uses: avakar/set-deployment-status@v1
         with:
           state: in_progress
-          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+          deployment_id: ${{ fromJson(steps.create_deployment.outputs.data).id }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -60,6 +64,6 @@ jobs:
         if: always()
         with:
           state: ${{ job.status }}
-          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+          deployment_id: ${{ fromJson(steps.create_deployment.outputs.data).id }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
