--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -32,38 +32,26 @@ jobs:
         run: |
           echo "::set-env name=ENVIRONMENT::staging"
 
-      - name: Create deployment
-        id: create_deployment
-        uses: octokit/request-action@v2.x
+      - name: start deployment
+        uses: bobheadxi/deployments@master
+        id: deployment
         with:
-          route: POST /repos/:repository/deployments
-          repository: ${{ github.repository }}
-          ref: ${{ github.ref }}
-          environment: ${{ env.ENVIRONMENT }}
-          production_environment: ${{ contains(github.ref,'master') }}
-          owner: ${{ github.actor }}
-          auto_merge: false
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-      
-      - uses: avakar/set-deployment-status@v1
-        with:
-          state: in_progress
-          deployment_id: ${{ fromJson(steps.create_deployment.outputs.data).id }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          step: start
+          token: ${{ secrets.GITHUB_TOKEN }}
+          env: ${{ env.ENVIRONMENT }}
 
       - name: deploy the pull request
         run: |
           # deployment logic goes here
-          sleep 10
+          sleep 20
           # instead we randomly succeed or fail the deployment
           exit $(( $RANDOM % 10 >= 5 ))
-      
-      - uses: avakar/set-deployment-status@v1
+     
+      - name: update deployment status
+        uses: bobheadxi/deployments@master
         if: always()
         with:
-          state: ${{ job.status }}
-          deployment_id: ${{ fromJson(steps.create_deployment.outputs.data).id }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          step: finish
+          token: ${{ secrets.GITHUB_TOKEN }}
+          status: ${{ job.status }}
+          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
