--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Test input
         env:
           BEANSTALK: ${{ github.event.inputs.beanstalk_env }} 
-          TEST: ${{ !contains(github.ref,'master') }}
+          TEST: ${{ github.ref == 'refs/heads/master' }}
         run: |
           echo "testing input: ${{ github.event.inputs.beanstalk_env }}"
           echo "print preset env $BEANSTALK"
@@ -23,12 +23,12 @@ jobs:
           echo "test $TEST"
 
       - name: Set environment to production
-        if: ${{ contains(github.ref,'master') }}
+        if: ${{ github.ref == 'refs/heads/master' }}
         run: |
           echo "::set-env name=ENVIRONMENT::production"
       
       - name: Set enviroment to staging
-        if: ${{ !contains(github.ref,'master') }}
+        if: ${{ github.ref != 'refs/heads/master' }}
         run: |
           echo "::set-env name=ENVIRONMENT::staging"
 
